- API: DockRegister has a new method "setProtected". Protected DockStations are never automatically deregistered when their parent is set to null.
- API: DockFrontend.isHiddenRootStation tells whether some DockElement is a root-station and a dockable without parent
- API: CDockable.hasParent tells whether a CDockable is visible and not a root station
- API/Bugfix: Invoking "setVisible" now checks "hasParent" and not "isVisible", as a result invoking "setVisible(true)" on a root CStation now places the station somewhere.
- API/Bugfix: DockFrontend.show is now also executed for hidden root-stations
- Bugfix: Glass Extension: should now throw less exceptions if a tab is smaller than 1x1 pixels.
- Bugfix: The ArchGradientPainter and CGlassEclipseTabPainter now update their field "wasPreviousSelected" every time "update" is executed. This prevents a bug where the wrong size of the tabs was calculated because of the property having the wrong value.
- Bugfix: Again updated the PlaceholderMap.PlaceholderKey.shrink methods, now they should work

[v1.1.0p7c]
- Bugfix: CGlassEclipseTabPainter did not update the icon correct, as a result the size of the tab was calculated wrong
! API: the PopupController is now accessible for clients through DockController.getPopupController. Clients can install their custom DockPopupMenuFactories for changing the way the popup menu behaves
! API: DockRelocator is now an interface.
- API: New VetoableDockRelocatorListener can be added to DockRelocator and receives events when something happens that involves a drag and drop operation

[Todo]
- Import/Export Perspectives from file
- DockActions/Tabs: assign priority to elements; more important elements stay longer on screen if there is not enough space for all elements
- Tabs: replace icon of drop down action showing overflowing Dockables by icon that dynamically shows the size of the menu